cabal-version:      2.4
name:               hylogen-glsl-demos
version:            0.1.0.0

synopsis:           Shadertoy ports to Hylogen GLSL DSL

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Takumi Crary
maintainer:         tcrary@gmail.com
license:            BSD-2-Clause
-- A copyright notice.
-- copyright:
-- category:

common deps
    build-depends: hylogen
    ghc-options: -Wall

executable original_hylogen_demo
    main-is:          Main.hs
    import: deps

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.13.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
